environments/dev/apps/app-taxi-os-argocd-demo/services/taxi-os-argocd-demo/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: taxi-os-argocd-demo
    app.kubernetes.io/part-of: app-taxi-os-argocd-demo
  name: taxi-os-argocd-demo
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: taxi-os-argocd-demo
      app.kubernetes.io/part-of: app-taxi-os-argocd-demo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: taxi-os-argocd-demo
        app.kubernetes.io/part-of: app-taxi-os-argocd-demo
    spec:
      containers:
      - image: nginxinc/nginx-unprivileged:latest
        imagePullPolicy: Always
        name: taxi-os-argocd-demo
        ports:
        - containerPort: 8080
        resources: {}
      serviceAccountName: default
status: {}
