environments/dev/apps/app-taxi-os-argocd-demo/services/taxi-os-argocd-demo/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: taxi-os-argocd-demo
  namespace: dev
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: taxi-os-argocd-demo
    weight: 100
  wildcardPolicy: None
